--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Calistoga&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
+
 :root {
   --main: #cabac8;
   --dark1: #254E70;
@@ -11,9 +13,12 @@
   font-size: 18px;
   letter-spacing: 0.1rem;
   }
+
 * {
   font-family: 'Fira Sans', sans-serif;
   font-family: 'Calistoga', cursive;
+  font-family: 'DM Serif Display', serif;
+  
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -111,6 +116,8 @@
     /* clip-path: circle(1.5rem at calc(100% - 2rem) 2rem); */
     clip-path: circle(1.3rem at calc(100% - 1.5rem) 1.35rem);
     transition: all 0.3s ease-in-out;
+    font-family: 'Calistoga', cursive;
+    z-index: 1;
   }
   
   #active:checked ~ .menu{
@@ -141,8 +148,9 @@
   }
 
 .container {
-  scroll-snap-type: y mandatory;
+  scroll-snap-type: y proximity;
   overflow-y: scroll;
+  scroll-behavior: smooth; 
   height: 100vh;
 }
   section {
@@ -153,17 +161,97 @@
     align-items: center;
     text-align: center;
     scroll-snap-align: start;
+    /* scroll-padding: 100px; */
   }
 
   .page-front {
     background-color: #8A7968;
+    flex-direction: column;
+    justify-content: flex-end;
+  }
+  .page-about {
+    
   }
   .page-skills {
-    background-color: #DDE8B9;
+    background-color: #626e38;
+  }
+  
+  .page-resume {
+    background-color: #6d3d3d;
+    /* height: 30vh; */
+    scroll-snap-align: center;
+  }
+  .page-contact {
+    background-color: #596392;
+  }
+
+  .profile-pic {
+    width: 3rem;
+    height: auto;
+    border-radius: 3px;
+  }
+/* FRONT */
+.blob {
+  /* position: relative; */
+  bottom: -20%;
+  left: 50%;
+  right: auto;
+  /* background-color: rgb(230, 159, 159); */
+	border-radius: 50%;
+  text-align: center;
+	margin: 10px;
+	height: 20px;
+	width: 20px;
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
+	transform: scale(1);
+	animation: pulse 2s infinite;
+  z-index: 0;;
+  
+}
+.arrow1 {
+  background-image: url("../img/arrow.svg");
+  filter: invert(100%) sepia(3%) saturate(13%) hue-rotate(334deg) brightness(102%) contrast(105%);
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 100px;
+  height: 100px;  
+}
+
+  .arrow {
+    width: 2rem;
+    height: 2rem;
+    background: transparent;
+    border-top: .31rem solid white;
+    border-right: .31rem solid white;
+    box-shadow: 0 0 0 lightgray;
+    transition: all 200ms ease;
+    
+		transform:
+    /* translate3d(0,-50%,0) */
+    rotate(135deg);
+  }
+  
+
+  @keyframes pulse {
+    0% {
+      transform: scale(0.95);
+      box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+    }
+  
+    70% {
+      transform: scale(1);
+      box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+    }
+  
+    100% {
+      transform: scale(0.95);
+      box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    }
   }
 
 
   @media only screen and (min-width: 768px) {
+
     .menu-btn {
       display: none;
     }
@@ -174,7 +262,7 @@
       background-color: var(--dark1);
       background-color: rgba(245, 245, 245, 0);
       top: 0rem;
-      left: 0;
+      left: -2rem;
       right: 0;
       width: 100%;
       height: unset;
@@ -184,7 +272,8 @@
       /* clip-path: circle(1.3rem at calc(100% - 1.5rem) 1.35rem); */
       clip-path: circle(75%);
       transition: all 0.3s ease-in-out;
-      font-size: 1rem;
+      font-size: .8rem;
+
     }
      
     .menu ul {
@@ -203,17 +292,37 @@
     }
 
     .menu ul li {
-      background-color: rgb(108, 125, 146);
+      /* background-color: rgb(108, 125, 146); */
       padding: .3rem;
-      margin-left: 3rem;
+      margin-left: .85rem;
       /* background-color: white; */
       /* border: 3px blue solid; */
       border-radius: 3px;
-      margin-top: 0rem;
+      margin-top: .5rem;
       /* background-color: violet; */
       border-bottom: 0px solid white;
     }
     .menu ul li:hover {
       border: solid 0px
+    }
+    .menu ul li a {
+      position: relative;
+    }
+
+    .menu ul li a:after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      transform: scaleX(0);
+      height: 2px;
+      bottom: 0;
+      left: 0;
+      background-color: #ffffff;
+      transform-origin: bottom right;
+      transition: transform 0.25s ease-out;
+    }
+    .menu ul li a:hover:after {
+      transform: scaleX(1);
+      transform-origin: bottom left;
     }
   }
