--- a/css/style.css
+++ b/css/style.css
@@ -223,6 +223,7 @@
   position: absolute;
   bottom: 0;
   max-width: 35ch;
+  width: 100%;
   /* transform: translateY(10rem); */
   transition: 500ms transform ease-in;
   background: linear-gradient(
