--- a/css/style.css
+++ b/css/style.css
@@ -189,15 +189,15 @@
 
 
 .projects-container {
-  /* margin: 0 5%; */
+  margin: 0;
+  padding: .5rem;
   background-color: aquamarine;
-  /* padding-top: 3.5rem; */
-  /* display: grid; */
-  /* justify-content: space-between; */
-  /* grid-template-rows: 100%; */
-  /* grid-template-columns: 100%; */
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr;
   /* row-gap: .5rem; */
-  position: relative;
+  position: relative;    
+  grid-row-gap: .5rem;
 }
 .project-info-card {
   --project-info-card-margin: 2rem;
@@ -440,9 +440,14 @@
 
 /* Fancy card */
 .project-card {
-  width: 100px;
-  height: 100px;
+  /* flex-basis: 50%; */
+  /* width: 100px; */
+  /* height: auto; */
+  /* min-height: 20%; */
+  /* max-height: 3rem; */
   border-radius: .15rem;
+  height: 100px;
+  width: 100px;
   overflow: hidden;
   background-size: cover;
   position: relative;
@@ -930,4 +935,9 @@
     row-gap: 2.5rem;
     position: relative;
   }
+  .project-card {
+    width: unset;
+    height: unset;
+  }
+
   }
