--- a/css/style.css
+++ b/css/style.css
@@ -109,15 +109,12 @@
   .menu {
     /* display: none; */
     position: fixed;
-    background-color: var(--dark1);
+    background-color: rgba(255, 255, 255, 0);
     top: 0rem;
     left: 0;
-    /* right: 0; */
     width: 100%;
     height: 100%;
     font-size: 2rem;
-    /* background: #000; */
-    /* clip-path: circle(1.5rem at calc(100% - 2rem) 2rem); */
     clip-path: circle(1.3rem at calc(100% - 1.5rem) 1.35rem);
     transition: all 0.3s ease-in-out;
     font-family: 'Calistoga', cursive;
@@ -126,6 +123,7 @@
   
   #active:checked ~ .menu{
     clip-path: circle(75%);
+    background-color: rgb(89, 123, 47, 1);
   }
 
   .menu ul {
@@ -187,18 +185,31 @@
     position: relative;
   }
 
+  .page-projects > h1 {
+    /* position: absolute; */
+    /* background-color: #162f44; */
+    padding: .5rem;
+    font-weight: 700;
+    color: rgb(255, 255, 255);
+    /* height: 1rem; */
+  }
 
 .projects-container {
   margin: 0 auto;
-  padding: .5rem;
+
   /* background-color: aquamarine; */
-  display: block;
+  /* display: block; */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: stretch  ;
+  align-items: stretch;
+  /* min-height: 100vh; */
   /* grid-template-rows: 1fr; */
   /* grid-template-columns: 1fr; */
   /* row-gap: .5rem; */
   position: relative;    
   /* grid-row-gap: .5rem; */
-}
+} 
 .project-info-card {
   --project-info-card-margin: 2rem;
   background-color: rgb(255, 255, 255,1);
@@ -278,7 +289,6 @@
 
 }
 .project-info-card-body-left {
-  
   grid-area: body-left;
   margin-left: var(--project-info-card-margin);
   margin-bottom: var(--project-info-card-margin);
@@ -440,92 +450,77 @@
 
 /* Fancy card */
 .project-card {
-  /* flex-basis: 50%; */
-  /* width: 100px; */
-  /* height: auto; */
-  /* min-height: 20%; */
-  /* max-height: 3rem; */
   border-radius: .15rem;
   height: 30vh;
-  width: 90vw; 
-  margin: 0 auto;
+  width: 40vw; 
+  margin: .1rem auto;
   margin-bottom: .5rem;
   overflow: hidden;
   background-size: cover;
   position: relative;
   transition: 350ms transform ease-in-out;
   color: white;
+  /* border: 21px solid wheat */
+}
+.project-card:last-child {
+  margin-right: auto;
 }
 
 .project-card-content {
-  /* background-color: #ffffff; */
-  --padding: 1rem;
+  --padding: .2rem;
   padding: var(--padding);
-  position: absolute;
   bottom: 0;
-  max-width: 35ch;
+  position: absolute;
   width: 100%;
-  /* transform: translateY(10rem); */
   transition: 400ms transform ease;
   background: linear-gradient(
     hsl(0 0% 0% / 0),
-    hsl(10 0% 0% / 0.7) 50%,
+    hsl(10 0% 0% / 0.9) 70%,
     hsl(0 0% 0% / 1)
   );
+  padding-bottom: .5rem;
 }
+
 .project-card-title {
   position: relative;
   width: max-content;
-  /* background-color: var(--dark1); */
-  font-size: 1.3rem;
-  margin-bottom: .3rem;
+  /* background-color: wheat; */
+  max-width: 100%;
+  font-size: 1rem;
+  margin-bottom: .23rem;
+  font-weight: 700;
 }
 
 .project-card-title::after {
   position: absolute;
   content: '';
   height: 2px;
-  width: 0;
-  left: calc(var(--padding)* -1);
-  bottom: -3px;
-  background-color: rgb(177, 177, 177);
-  transition: width 400ms ease-out;
-
-}
-
-.project-card:hover {
-  transform: scale(1.05);
-}
-.project-card:hover .project-card-content {
-  transform: translateY(0) !important;
-  transition-property: all;
-  transition-delay: 230ms;
-  
-}
-.project-card:hover .project-card-title::after{
-  background-color: chartreuse;
-  background-color: white;
   width: calc(100% + var(--padding));
-}
+  left: calc(var(--padding)* -1);
+  /* left: 0; */
+  bottom: -3px;
+  
+  background-color: white;
+  transition: width 400ms ease-out;
+} 
 
 .project-card-body {
   /* background-color: antiquewhite; */
-  font-size: .75rem;
+  font-size: .65rem;
   margin-bottom: .5rem;
+  line-height: .8rem;
 }
 
 .project-card-btn {
-  padding: .3rem;
-  /* background-color: var(--dark1); */
-  box-shadow: rgba(255, 255, 255, 0.25) 0px 1px 1px, #ffffff21 0px 0px 1px 1px;
+  padding: .123rem .5rem;
+
+  background-color: rgba(0, 255, 242, 0.281);
+  color:rgb(255, 255, 255);
+  /* box-shadow: rgba(255, 255, 255, 0.25) 0px 1px 1px, #ffffff21 0px 0px 1px 1px; */
   border-radius: .4rem;
+  /* margin-bottom: 11.5rem; */
 }
-.project-card-btn:hover {
-  background-color:  rgba(187, 187, 187, 0);
-  /* color: var(--dark1); */
-  box-shadow: rgba(255, 255, 255, 0.25) 0px 3px 3px, hsla(0, 0%, 100%, 0.473) 0px 0px 3px 1px;
-  cursor: pointer;
-}
+
 
 #card-palabras {background-image: url('../img/projects/palabras.jpg');
 }
@@ -538,79 +533,8 @@
 #card-chess {background-image: url('../img/projects/chess.jpg');
 }
 
-/* PROJECT INFO CARD */
-.project-info-card {
-  /* background-color: #e5b769; */
-}
-
-/* ORIGINAL CARD */
-.card {
-  color: white;
-  /* background-image: url(img/projects/chess.jpg); */
-  background-size: cover;
-  padding: 8rem 0 0;
-  max-width: 35ch;
-  border-radius: .4rem;
-  overflow: hidden;
-  transition: transform 500ms ease;
-  background-color: #e5b769;
-  background-size: cover;
-}
-
-
-.card:hover,
-.card:focus-within {
-  transform: scale(1.05)
-}
-
-.card-content {
-  --padding: 1rem;
-  padding: var(--padding);
-  background: linear-gradient(
-    hsl(0 0% 0% / 0),
-    hsl(10 0% 0% / 0.7) 50%,
-    hsl(0 0% 0% / 1)
-  );
-}
-
-
-.card-title {
-  position: relative;
-  width: max-content;
-}
-
-.card-title::after {
-  content: '';
-  position: absolute;
-  height: 4px;
-  background-color: rgb(188, 228, 151);
-  width: calc(100% + var(--padding));
-  left: calc(var(--padding) * -1);
-  bottom: -.2rem;
-  
-  transform-origin: 0%;
-  transition: transform 500ms ease;
-}
-
-.card:hover .card-title::after,
-.card:focus-within .card-title::after {
-  transform: scaleX(1);
-}
-
-.card-body {
-  color: rgb(255 255 255 / 0.85);
-}
  
-.more-info-button  {
-  display: inline;
-  text-decoration: none;
-  padding: .4em 1.2em;
-  border-radius: .25em;
-}
-.card-button:hover, .button:focus {
-  background-color: yellow
-}
-
+/* 
 @media (hover) {
   .card-content {
     transform: translateY(70%);
@@ -635,7 +559,7 @@
   .card-title::after {
     transform: scaleX(0);
   }
-};
+}; */
 
 
 
@@ -856,8 +780,8 @@
     padding: unset;
     /* background-color: rgb(103, 139, 127); */
     
-    margin: 0 20%;
-    padding-top: 3.5rem;
+    margin: 3rem 20%;
+
     display: grid;
     justify-content: space-between;
     grid-template-rows: 16rem 16rem;
@@ -877,4 +801,71 @@
   height: unset;
   }
 
-  }
+  
+.project-card:hover {
+  transform: scale(1.05);
+}
+
+.project-card-content {
+  /* background-color: #ffffff; */
+  --padding: 1rem;
+  padding: var(--padding);
+  position: absolute;
+  bottom: 0;
+  max-width: 35ch;
+  width: 100%;
+  /* transform: translateY(10rem); */
+  transition: 400ms transform ease;
+  background: linear-gradient(
+    hsl(0 0% 0% / 0),
+    hsl(10 0% 0% / 0.7) 50%,
+    hsl(0 0% 0% / 1)
+  );
+}
+
+
+.project-card:hover .project-card-content {
+  transform: translateY(0) !important;
+  transition-property: all;
+  transition-delay: 230ms;
+  
+}
+.project-card:hover .project-card-title::after{
+  background-color: chartreuse;
+  background-color: white;
+  width: calc(100% + var(--padding));
+}
+ 
+.project-card-btn:hover {
+  background-color: rgba(0, 255, 242, 0.568);
+  /* color: var(--dark1); */
+  /* box-shadow: rgba(255, 255, 255, 0.25) 0px 3px 3px, hsla(0, 0%, 100%, 0.473) 0px 0px 3px 1px; */
+  cursor: pointer;
+  
+}
+
+
+.project-card-title::after {
+  position: absolute;
+  content: '';
+  height: 2px;
+  width: 0;
+  left: calc(var(--padding)* -1);
+  /* left: 0; */
+  bottom: -3px;
+  background-color: rgb(177, 177, 177);
+  transition: width 400ms ease-out;
+}
+
+
+.project-card-title {
+  position: relative;
+  width: max-content;
+  max-width: 100%;
+  font-size: 1.5rem;
+  margin-bottom: .3rem;
+  font-weight: 700;
+}
+
+
+}
