--- a/css/style.css
+++ b/css/style.css
@@ -186,58 +186,44 @@
     height: unset;
   }
 
-  .page-projects > h1 {
-    /* position: absolute; */
-    /* background-color: #162f44; */
+  .page-projects > h1 { 
     padding: .5rem;
     font-weight: 700;
-    color: rgb(255, 255, 255);
-    /* height: 1rem; */
+    color: rgb(255, 255, 255); 
   }
 
 .projects-container {
   margin: 0 auto;
-
   /* background-color: aquamarine; */
-  /* display: block; */
   display: flex;
   flex-wrap: wrap;
   justify-content: stretch  ;
   align-items: stretch;
-  /* min-height: 100vh; */
-  /* grid-template-rows: 1fr; */
-  /* grid-template-columns: 1fr; */
-  /* row-gap: .5rem; */
   position: relative;    
-  /* grid-row-gap: .5rem; */
 } 
+
+
 .project-info-card {
   --project-info-card-margin: 2rem;
-  background-color: rgb(255, 255, 255,1);
-  /* grid-area: 1 / 1 / 4 / 2; */
+  background-color: rgb(255, 255, 255,1); 
   position: absolute;
-  width: 100%;
-  height: calc(100% - 3rem);
-  top: 3rem;
+  width: 105%;
+  height: 100%; 
+  top: 0rem;
   left: 0;
-  z-index: 100;
-  /* transition: 900ms transform cubic-bezier(0,-0.03,.59,.93); */
+  z-index: 100; 
   display: grid;
   gap: 2.6rem;
   grid: 
   [row1-start] "header header header header" 3rem [row1-end]
   [row2-start] "body-left body-left body-right body-right" 1fr [row2-end]
-  /* [row3-start] "footer footer footer footer" 3rem [row3-end] */
-  / 1fr 1fr 1fr;
-  /* display: none; */
-  /* transform: translateY(3rem); */
+  / 1fr 1fr 1fr; 
   box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
   border-radius: .15rem;
   transform: translateX(0)
 }
-.project-info-card-hidden {
-  /* left: -200%; */
-  /* transform: translateX(-200%); */
+ 
+.project-info-card-hidden { 
   display: none;
 }
 .project-info-card-header {
@@ -669,6 +655,64 @@
     }
   }
 
+  @media only screen and (max-width: 767px) {
+    .page-projects > h1 {
+      /* margin: 3rem 3rem; */
+      margin: 0;
+      padding-left: 2rem;
+      /* background-color: white; */
+      font-size: 1rem;
+    }
+    .project-info-card {
+      background-color: rgb(255, 255, 255); 
+      position: relative;
+      width: 100%;
+      /* height: 100%;  */
+      min-height: 100vh;
+      top: 0rem;
+      left: 0;
+      right: 0;
+      z-index: 100; 
+      display: block;
+      /* margin: 1rem; */
+      /* display: grid; */
+      /* gap: 2.6rem;
+      grid: 
+      [row1-start] "header" 3rem [row1-end]
+      [row2-start] "body-left body-left" 1fr [row2-end]
+      [row3-start] "body-right body-right" 1fr [row3-end]
+      / 1fr 1fr 1fr;  */
+      box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
+      border-radius: .15rem;
+      transform: translateX(0)
+    }
+    .back-btn {
+      top: -2rem;
+      left: 0;
+      height: 1.6rem;
+      width: 1.6rem;
+    }
+    .back-btn:hover {
+      transform: unset;
+    } 
+    .project-info-card-header {
+      margin: unset;
+      width: 100%;
+      padding: .25rem 1rem;
+      display: flex;
+      justify-content: center;
+      /* background-color: rgb(191, 212, 170); */
+    }
+    .project-info-card-header-h1 {
+      text-align: center;
+    }
+    .project-info-card-header-h1::after {
+      display: none;
+    }
+    .project-info-card-body-left,.project-info-card-body-right {
+      margin: unset
+    }
+  }
 
   @media only screen and (min-width: 768px) {
 
@@ -875,5 +919,6 @@
 .page-projects {
   min-height: 100vh;
 }
+
 
 }
